# CppDesktopapp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat
Dokumentation/: Doku.docx
src/: Application.cpp  Application.hpp  CMakeLists.txt  config.hpp  font.cpp  font.hpp  macros.cpp  macros.hpp  main.cpp  typedefs.hpp
src/Components/: Button.cpp  Button.hpp  ComponentManager.cpp  ComponentManager.hpp  Components.hpp
src/GL/: glFunctions.cpp  glFunctions.hpp
src/Render/: ButtonRenderer.cpp  ButtonRenderer.hpp  FontRenderer.hpp  MasterRenderer.cpp  MasterRenderer.hpp  QuadRenderer.cpp  QuadRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Shader/: BasicShader.cpp  BasicShader.hpp  ButtonShader.cpp  ButtonShader.hpp  FontShader.cpp  FontShader.hpp  Shader.cpp  Shader.hpp
src/config/: config.txt
src/shader_prgrams/: basic_vert.vert  button_frag.frag  font_frag.frag
